# trabajo-paralelo

./: .gitignore  CMakeLists.txt  README.md  leer_csv.cpp  leer_csv.h  main.c++  main.cpp
Compañeros/: maty.cpp  seba.cpp
